VQ-3598:Ability to View Search Popup Screen with Various KYC Details

--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
@@ -214,5 +214,14 @@ select#quote-input option {
   color: #dc3545;
   margin-top: 4px;
 }
+.flexible-header {
+  white-space: nowrap;
+  width: auto;
+  text-align: left;
+}
+.ui-datatable th,
+.ui-datatable td {
+  white-space: nowrap;
+}
   
     
