--- a/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
@@ -85,7 +85,7 @@
                             <td class="text-start" pTooltip="{{ getTaxTooltip() }}" tooltipPosition="bottom">
                                 {{ totalTaxes | number }}
                             </td>
-                            <td class="text-start" appCommaFormat>{{passedPremium | number }}</td>
+                            <td class="text-start" appCommaFormat>{{premiumAmount | number }}</td>
                             <td class="text-start" appCommaFormat>{{ quotationDetails.quotationProducts[0].premium |
                                 number }}</td>
                         </tr>
